# ccat

./: README.md  catlist.json  creative_notes.json  pyproject.toml  style_library.json
.github/workflows/: hourly-cat.yml
cats/: 2026-02.json
characters/: captain.json  index.json  lingling.json  mochi.json  momo.json
docs/: STYLE_REFERENCE.md  app.js  comment_map.json  index.html  likes.json  style.css
scripts/: generate_cat.py
src/catime/: cli.py
