[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catime"
version = "0.4.6"
description = "AI-generated hourly cat images - a new cat every hour!"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["httpx"]

[project.scripts]
catime = "catime.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/catime"]

[tool.hatch.build.targets.wheel.force-include]
"docs" = "catime/docs"
